[gd_scene load_steps=9 format=3 uid="uid://c8oqxmm2w2wvv"]

[ext_resource type="Script" uid="uid://birvuixustgun" path="res://addons/thot/example/example FPS/world.gd" id="1_6tkge"]
[ext_resource type="PackedScene" uid="uid://c1j7an8woikyd" path="res://addons/thot/example/example FPS/environment.tscn" id="1_iktak"]
[ext_resource type="Texture2D" uid="uid://8ka2ui7sq36p" path="res://addons/thot/example/example FPS/addons/kenney_particle_pack/circle_05.png" id="3_ehmxv"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_u5pdl"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_w2qqb"]
sky_material = SubResource("ProceduralSkyMaterial_u5pdl")

[sub_resource type="Environment" id="Environment_6knbf"]
background_mode = 2
sky = SubResource("Sky_w2qqb")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ujyws"]
bg_color = Color(1, 0.117647, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cmecq"]
bg_color = Color(0.00392157, 1, 0, 1)

[node name="World" type="Node" unique_id=270616734]
script = ExtResource("1_6tkge")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." unique_id=1811685158]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="." unique_id=2142331465]
environment = SubResource("Environment_6knbf")

[node name="Environment" parent="." unique_id=177492720 instance=ExtResource("1_iktak")]

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1545576623]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer" unique_id=410046376]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 268.0
offset_top = 160.5
offset_right = -268.0
offset_bottom = -160.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu" unique_id=2111278478]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer" unique_id=2134635274]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer" unique_id=2044005909]
layout_mode = 2
text = "puerto 9999  \"lobby\""
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer" unique_id=877608052]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer" unique_id=1544827957]
layout_mode = 2
text = "Join"

[node name="enet _ websocket" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer" unique_id=1088204099]
layout_mode = 2
toggle_mode = true
text = "enet / websocket"

[node name="iroh enter or host" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer" unique_id=764042816]
layout_mode = 2
toggle_mode = true
text = "enter iroh or webr"

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer" unique_id=2047647420]
layout_mode = 2
placeholder_text = "Enter Address to Join Here"
alignment = 1

[node name="link_iroh" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer" unique_id=292107044]
layout_mode = 2
text = "lobby"
placeholder_text = "Enter iroh tiket or loby Webr"
alignment = 1

[node name="HUD" type="Control" parent="CanvasLayer" unique_id=1353987029]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HUD" unique_id=99612679]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -569.0
offset_top = -323.0
offset_right = -57.00003
offset_bottom = 189.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.03, 0.03)
pivot_offset = Vector2(576, 324)
texture = ExtResource("3_ehmxv")
stretch_mode = 5

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/HUD" unique_id=716078852]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 330.0
offset_top = 70.0
offset_right = -330.0
offset_bottom = -536.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_ujyws")
theme_override_styles/fill = SubResource("StyleBoxFlat_cmecq")
max_value = 3.0
value = 3.0
show_percentage = false

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="." unique_id=2121469115]
_spawnable_scenes = PackedStringArray("uid://xcjrjq5cbn7y")
spawn_path = NodePath("..")
spawn_limit = 1

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/enet _ websocket" to="." method="_on_enet___websocket_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/iroh enter or host" to="." method="_on_iroh_enter_or_host_pressed"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
